# book-club

./: .gitignore  README.md
abba/json/: default.config
head_first_design_patterns/abba/json/: CMakeLists.txt  Makefile
head_first_design_patterns/abba/json/include/: Json.hpp
head_first_design_patterns/abba/json/src/: Json.cpp  Parse.cpp
head_first_design_patterns/mjiam/: .gitignore
head_first_design_patterns/mraasvel/ch06_command_pattern/cpp/lib/: CMakeLists.txt  device.cpp  remote.cpp
head_first_design_patterns/mraasvel/ch06_command_pattern/cpp/lib/commands/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch06_command_pattern/cpp/lib/devices/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch06_command_pattern/cpp/test/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch08_template_method/sort/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch08_template_method/sort/lib/include/: sfinae.hpp
head_first_design_patterns/mraasvel/ch08_template_method/sort/test/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch09_iterator_composite/iterators/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch09_iterator_composite/iterators/app/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch09_iterator_composite/iterators/lib/: CMakeLists.txt  consumers.hpp  flatten.hpp  map.hpp  take.hpp
head_first_design_patterns/mraasvel/ch09_iterator_composite/iterators/test/: CMakeLists.txt  filter.cpp  flatten.cpp  maarterator.cpp  map.cpp  range_iterator.cpp
head_first_design_patterns/mraasvel/ch11_proxy_pattern/json/lib/: CMakeLists.txt  json_parse.cpp  parser_object.cpp  parser_string.cpp
head_first_design_patterns/mraasvel/ch11_proxy_pattern/json/lib/include/private/: parser_array.hpp  parser_bool.hpp  parser_object.hpp
head_first_design_patterns/mraasvel/ch11_proxy_pattern/lib/: CMakeLists.txt
head_first_design_patterns/mraasvel/ch11_proxy_pattern/lib/include/: memory_storage.hpp  storage_proxy.hpp
head_first_design_patterns/mraasvel/ch11_proxy_pattern/socket-stream/lib/: CMakeLists.txt  net.cpp  socket.cpp  socket_buffer.cpp  tcp_listener.cpp  tcp_stream.cpp
head_first_design_patterns/pde-bakk/ch10_jsonparser/: .gitignore  CMakeLists.txt  Makefile  main.cpp  run_tests.sh
head_first_design_patterns/pde-bakk/ch10_jsonparser/include/: JsonNode.hpp  JsonParser.hpp
head_first_design_patterns/pde-bakk/ch10_jsonparser/srcs/: JsonNode.cpp  JsonParser.cpp
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/: CMakeLists.txt  basic_test.json  ft_ssl_tests.json  main.cpp  test_boolean.cpp  test_float.cpp  test_integer.cpp  test_list.cpp  test_mix.cpp  test_nulltype.cpp  test_object.cpp  test_object.json  test_string.cpp
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/jsons/float/: dot_before.json  double_dot.json  many_dots.json
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/jsons/int/: 42g.json
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/jsons/list/: list_complex.json
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/jsons/string/: abi.json  contains_spaces.json  contains_tabs.json  escape_characters.json  invalid_backslash.json  invalid_doublequote.json
head_first_design_patterns/pde-bakk/ch10_jsonparser/tests/tests/: Makefile
jaberkro/: ws28x_state_pattern.ino
jevan-de/observer/: README.md  log_aggregator.py  logger.py  main.py  observer.py
jevan-de/strategy/: oauth.py  user.py
jkoers/ch11_proxy_pattern/: README.md
lwray/adapter/: FrenchAdapter.hpp
lwray/template/: main.cpp
mjiam/08_template/: main.cpp  state_parser.hpp  uri_parser  uri_parser.hpp
mraasvel/ch01_introduction_to_design_patterns/: Makefile
mraasvel/ch03_decorator_pattern/: LowerCaseInputStream.java
mraasvel/ch07_adapter_facade/adapter_pattern/cpp/test/: CMakeLists.txt  memory_storage.cpp
mraasvel/ch08_template_method/astar_cpp/: CMakeLists.txt
mraasvel/ch08_template_method/astar_cpp/eight_puzzle/: CMakeLists.txt  eight_puzzle.cpp  eight_puzzle.hpp  main.cpp
mraasvel/ch08_template_method/astar_cpp/heap/: heap.cpp
mraasvel/ch08_template_method/astar_cpp/lib/: CMakeLists.txt  astar.hpp
mraasvel/ch08_template_method/astar_cpp/test/: CMakeLists.txt
mraasvel/ch09_iterator_composite/variant/: CMakeLists.txt  Makefile
mraasvel/ch09_iterator_composite/variant/app/: CMakeLists.txt  main.cpp
mraasvel/ch09_iterator_composite/variant/lib/: CMakeLists.txt  variant.cpp
mraasvel/ch09_iterator_composite/variant/lib/include/: option.hpp  variant.hpp
mraasvel/ch10_state_pattern/json/lib/: CMakeLists.txt  json_parse.cpp  parser.cpp  parser_array.cpp  parser_null.cpp  parser_number.cpp  parser_object.cpp  parser_string.cpp
mraasvel/ch10_state_pattern/json/lib/include/: json_parse.hpp  parser.hpp
mraasvel/ch10_state_pattern/json/lib/include/private/: parser.hpp  parser_array.hpp  parser_number.hpp  parser_object.hpp
mraasvel/ch10_state_pattern/json/lib/include/public/: json_parse.hpp
mraasvel/ch11_proxy_pattern/: CMakeLists.txt  README.md
mraasvel/ch11_proxy_pattern/json/: CMakeLists.txt
mraasvel/ch11_proxy_pattern/json/json/: CMakeLists.txt
mraasvel/ch11_proxy_pattern/json/json/lib/: json.cpp
mraasvel/ch11_proxy_pattern/json/json/lib/include/: json.hpp
mraasvel/ch11_proxy_pattern/json/json/util/: CMakeLists.txt  printer.cpp
mraasvel/ch11_proxy_pattern/json/lib/: parser_bool.cpp  parser_number.cpp
mraasvel/ch11_proxy_pattern/json/lib/include/public/: json_parse.hpp
mraasvel/ch11_proxy_pattern/json/test/: array.cpp  bool.cpp  null.cpp  number.cpp
mraasvel/ch11_proxy_pattern/server/: CMakeLists.txt  main.cpp
ngerrets/: numbers.json  test.json
ngerrets/ch11/: Makefile
ngerrets/ch12/: Makefile
ngerrets/json/: JsonNode.cpp
safoh/: doglove  facade.c  noidea
software_testing/: .gitignore
software_testing/jevan-de/02_specification_based/: pyproject.toml  pytest.ini  substrings_between.py  test_substrings_between.py
software_testing/jevan-de/03_structural_testing/: count_end_with.py  pyproject.toml  test_count_end_with.py
tbruinem/json/: makefile  (+1 more)
xchen/: .gitignore
(+400 files in other folders)
