[tool.poetry]
name = "02_specification_based"
version = "0.1.0"
description = ""
authors = ["Jesse van der Wolf <jessevanderwolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
